[project]
name = "django-easy-images"
dynamic = ["version"]
description = "Easily build responsive HTML `<img>` tags from Django images"
authors = [{ name = "Chris Beaven", email = "smileychris@gmail.com" }]
dependencies = [
    "django>=4.2",
    "typing-extensions>=4.11.0",
    "django-stubs-ext>=4.2.7",
    "pyvips>=2.2.2",
    "tqdm>=4.66.2",
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/SmileyChris/django-easy-images"
Docs = "https://smileychris.github.io/django-easy-images/"

[project.license]
text = "MIT"

[project.optional-dependencies]
tests = ["pytest", "pytest-django>=4.8.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = "."
addopts = "--cov=easy_images --cov-report=term-missing"

[dependency-groups]
dev = ["pillow", "mkdocs>=1.6.1", "pytest-cov>=5.0.0", "pytest-django>=4.11.0"]
